--- a/.env
+++ b/.env
@@ -11,6 +11,10 @@ RTMP_URL=rtmp://192.168.0.154
 BUCKET_URL=gs://streamapp-fe2e3.appspot.com
 MONGO_URL=mongodb+srv://stream:stream2022@stream.9nmn3oo.mongodb.net/stream
 
+JWT_SECRET=hhj4h545h4j5hj45h5j4h545
+JWT_EXPIRE=30d
+JWT_COOKIE_EXPIRE=30
+
 #Firebase Configurations
 API_KEY=AIzaSyAZEsXl8c7AQAcayMwOAk4v7zw6krYc-q4
 AUTH_DOMAIN=streamapp-fe2e3.firebaseapp.com
