--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.0",
-    "node-media-server": "^2.4.9"
+    "node-media-server": "^2.4.9",
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
